<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_weight="0.63"
            android:background="#004cff"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffe5f6"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/EditTextPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_phone"
            android:inputType="phone" >
        </EditText>

        <Spinner
            android:id="@+id/SpinnerGender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/genderTypelist"
            android:prompt="@string/user_gender" >
        </Spinner>

        <EditText
            android:id="@+id/EditTextPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password"
            android:inputType="textPassword" >
        </EditText>
        <!-- Put form controls here -->

        <Button
            android:id="@+id/ButtonRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/register" >
        </Button>
    </LinearLayout>

</ScrollView>